Added header and hero sec to home page

--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -2,6 +2,9 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<div class="hero-section">
+    <img src="/Image/masonhero.png" alt="Happy customers shopping for electronics" />
+    <div class="hero-text">
+        <button class="btn btn-shop-now">Shop Now</button>
+    </div>
+</div>
