--- a/Components/App.razor
+++ b/Components/App.razor
@@ -7,7 +7,10 @@
     <base href="/" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="/css/home.css" />
+
     <link rel="stylesheet" href="MaisonTelecom.styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
