done with home page design

--- a/Components/Layout/Footer.razor
+++ b/Components/Layout/Footer.razor
@@ -6,18 +6,15 @@
         <a href="#"><i class="fab fa-whatsapp"></i></a>
     </div>
     <div class="footer-links">
-        <a href="#">Privacy</a>
+        <a href="#">About Us</a>
+        <a href="#">Contact Us</a>
         <a href="#">Delivery</a>
-        <a href="#">Terms of Use</a>
-        <a href="#">Contact</a>
-        <a href="#">My Kingdom</a>
+         
     </div>
     <div class="copyright">
-        © copyright 2023 Mason Telecom
+        © copyright 2025 Mason Telecom
     </div>
-    <div class="powered-by">
-        Powered by Neighborly
-    </div>
+     
 </footer>
 
 @code {
