--- a/Components/App.razor
+++ b/Components/App.razor
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="/css/home.css" />
+    <link rel="stylesheet" href="/css/shop.css" />
+    <link rel="stylesheet" href="/css/product.css" />
+    <link rel="stylesheet" href="/css/product.css" />
+    <link rel="stylesheet" href="/css/cart.css" />
+    <link rel="stylesheet" href="/css/wishlist.css" />
+    <link rel="stylesheet" href="/css/checkoutwithshipping.css" />
+    <link rel="stylesheet" href="/css/checkoutwithoutshipping.razor" />
 
     <link rel="stylesheet" href="MaisonTelecom.styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
