done with admin dashboard designs

--- a/Components/Layout/Header.razor
+++ b/Components/Layout/Header.razor
@@ -12,8 +12,11 @@
                 <button type="submit"><i class="fas fa-search"></i></button>
             </div>
             <div class="user-icons">
+                <a href="#"><i class=""></i>HOME</a>
+                @* <a href="#"><i class=""></i>SHOP</a> *@
                 <a href="#"><i class="far fa-heart"></i></a>
                 <a href="#"><i class="fas fa-shopping-cart"></i></a>
+              
             </div>
         </nav>
     </div>
