--- a/Components/App.razor
+++ b/Components/App.razor
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="/css/cart.css" />
     <link rel="stylesheet" href="/css/wishlist.css" />
     <link rel="stylesheet" href="/css/checkoutwithshipping.css" />
-    <link rel="stylesheet" href="/css/checkoutwithoutshipping.razor" />
+    <link rel="stylesheet" href="/css/checkoutwithoutshipping.css" />
+    <link rel="stylesheet" href="/css/admin.css" />
 
     <link rel="stylesheet" href="MaisonTelecom.styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
