--- a/Components/App.razor
+++ b/Components/App.razor
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="/css/checkoutwithshipping.css" />
     <link rel="stylesheet" href="/css/checkoutwithoutshipping.css" />
     <link rel="stylesheet" href="/css/admin.css" />
+    <link rel="stylesheet" href="/css/aboutus.css" />
+    <link rel="stylesheet" href="/css/contactus.css" />
 
     <link rel="stylesheet" href="MaisonTelecom.styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
